// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generate (configs) > config as flat config > updates the documentation 1`] = `
"<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`recommended\` configuration.

| Name                           | Description            | 💼 |
| :----------------------------- | :--------------------- | :- |
| [no-bar](docs/rules/no-bar.md) | Description of no-bar. | ✅  |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | ✅  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (configs) > config as flat config > updates the documentation 2`] = `
"# test/no-foo

📝 Description of no-foo.

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (configs) > config as flat config > updates the documentation 3`] = `
"# test/no-bar

📝 Description of no-bar.

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (configs) > config as flat config with file-scoped overrides > does not treat file-scoped overrides as global config severity 1`] = `
"<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`recommended\` configuration.

| Name                           | Description            | 💼 |
| :----------------------------- | :--------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | ✅  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (configs) > config as flat config with file-scoped overrides > does not treat file-scoped overrides as global config severity 2`] = `
"# test/no-foo

📝 Description of no-foo.

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (configs) > config as flat config with only scoped entries > uses the last scoped severity 1`] = `
"<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`recommended\` configuration.

| Name                           | Description            | 💼 |
| :----------------------------- | :--------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | ✅  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (configs) > config as flat config with only scoped entries > uses the last scoped severity 2`] = `
"# test/no-foo

📝 Description of no-foo.

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (configs) > config with overrides > generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`recommended\` configuration.

| Name                           | Description            | 💼 |
| :----------------------------- | :--------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | ✅  |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (configs) > config with overrides > generates the documentation 2`] = `
"# test/no-foo

📝 Description of no-foo.

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (configs) > only a \`recommended\` config > updates the documentation 1`] = `
"<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`recommended\` configuration.

| Name                           | Description  | 💼 |
| :----------------------------- | :----------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description. | ✅  |

<!-- end auto-generated rules list -->"
`;

exports[`generate (configs) > only a \`recommended\` config > updates the documentation 2`] = `
"# test/no-foo

📝 Description.

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (configs) > rule config with options > generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`recommended\` configuration.

| Name                           | Description            | 💼 |
| :----------------------------- | :--------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | ✅  |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (configs) > rule config with options > generates the documentation 2`] = `
"# test/no-foo

📝 Description of no-foo.

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (configs) > rules that are disabled or set to warn > generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
⚠️ Configurations set to warn in.\\
🚫 Configurations disabled in.\\
🌟 Set in the \`other\` configuration.\\
🔥 Set in the \`recommended\` configuration.

| Name                           | Description            | 💼 | ⚠️    | 🚫    |
| :----------------------------- | :--------------------- | :- | :---- | :---- |
| [no-bar](docs/rules/no-bar.md) | Description of no-bar. |    |       | 🌟 🔥 |
| [no-baz](docs/rules/no-baz.md) | Description of no-baz. | 🔥 |       | 🌟    |
| [no-bez](docs/rules/no-bez.md) | Description of no-bez. |    | 🌟    |       |
| [no-biz](docs/rules/no-biz.md) | Description of no-biz. |    |       | 🌟    |
| [no-boz](docs/rules/no-boz.md) | Description of no-boz. |    | 🔥    |       |
| [no-buz](docs/rules/no-buz.md) | Description of no-buz. |    | 🌟 🔥 |       |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. |    |       | 🔥    |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (configs) > rules that are disabled or set to warn > generates the documentation 2`] = `
"# test/no-foo

📝 Description of no-foo.

🚫 This rule is _disabled_ in the 🔥 \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (configs) > rules that are disabled or set to warn > generates the documentation 3`] = `
"# test/no-bar

📝 Description of no-bar.

🚫 This rule is _disabled_ in the following configs: 🌟 \`other\`, 🔥 \`recommended\`.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (configs) > rules that are disabled or set to warn > generates the documentation 4`] = `
"# test/no-baz

📝 Description of no-baz.

💼🚫 This rule is enabled in the 🔥 \`recommended\` config. This rule is _disabled_ in the 🌟 \`other\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (configs) > rules that are disabled or set to warn > generates the documentation 5`] = `
"# test/no-biz

📝 Description of no-biz.

🚫 This rule is _disabled_ in the 🌟 \`other\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (configs) > rules that are disabled or set to warn > generates the documentation 6`] = `
"# test/no-boz

📝 Description of no-boz.

⚠️ This rule _warns_ in the 🔥 \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (configs) > rules that are disabled or set to warn > generates the documentation 7`] = `
"# test/no-buz

📝 Description of no-buz.

⚠️ This rule _warns_ in the following configs: 🌟 \`other\`, 🔥 \`recommended\`.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (configs) > rules that are disabled or set to warn > generates the documentation 8`] = `
"# test/no-bez

📝 Description of no-bez.

⚠️ This rule _warns_ in the 🌟 \`other\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (configs) > rules that are disabled or set to warn, only one config present > generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

⚠️ Configurations set to warn in.\\
🚫 Configurations disabled in.\\
✅ Set in the \`recommended\` configuration.

| Name                           | Description            | ⚠️ | 🚫 |
| :----------------------------- | :--------------------- | :- | :- |
| [no-bar](docs/rules/no-bar.md) | Description of no-bar. |    | ✅  |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | ✅  |    |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (configs) > rules that are disabled or set to warn, only one config present > generates the documentation 2`] = `
"# test/no-foo

📝 Description of no-foo.

⚠️ This rule _warns_ in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (configs) > rules that are disabled or set to warn, only one config present > generates the documentation 3`] = `
"# test/no-bar

📝 Description of no-bar.

🚫 This rule is _disabled_ in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (configs) > rules that are disabled or set to warn, two configs present > generates the documentation 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

⚠️ Configurations set to warn in.\\
🚫 Configurations disabled in.\\
✅ Set in the \`recommended\` configuration.\\
⌨️ Set in the \`typescript\` configuration.

| Name                           | Description            | ⚠️ | 🚫 |
| :----------------------------- | :--------------------- | :- | :- |
| [no-foo](docs/rules/no-foo.md) | Description of no-foo. | ✅  | ⌨️ |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (configs) > rules that are disabled or set to warn, two configs present > generates the documentation 2`] = `
"# test/no-foo

📝 Description of no-foo.

⚠️🚫 This rule _warns_ in the ✅ \`recommended\` config. This rule is _disabled_ in the ⌨️ \`typescript\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (configs) > with --ignore-config > hides the ignored config 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`recommended\` configuration.

| Name                           | Description             | 💼 |
| :----------------------------- | :---------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description for no-foo. | ✅  |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (configs) > with --ignore-config > hides the ignored config 2`] = `
"# test/no-foo

📝 Description for no-foo.

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (configs) > with config that does not have any rules > uses recommended config emoji since it is the only relevant config 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`recommended\` configuration.

| Name                           | Description             | 💼 |
| :----------------------------- | :---------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description for no-foo. | ✅  |

<!-- end auto-generated rules list -->
"
`;

exports[`generate (configs) > with config that does not have any rules > uses recommended config emoji since it is the only relevant config 2`] = `
"# test/no-foo

📝 Description for no-foo.

💼 This rule is enabled in the ✅ \`recommended\` config.

<!-- end auto-generated rule header -->
"
`;

exports[`generate (configs) > with external rules in config > ignores external rules 1`] = `
"## Rules
<!-- begin auto-generated rules list -->

💼 Configurations enabled in.\\
✅ Set in the \`recommended\` configuration.

| Name                           | Description             | 💼 |
| :----------------------------- | :---------------------- | :- |
| [no-foo](docs/rules/no-foo.md) | Description for no-foo. | ✅  |

<!-- end auto-generated rules list -->
"
`;
